* Option to query 3 masks and accuracy for each * Made header C++14 compatible * Added image resize to longest size 1024 * Exchanged image embedder model and adjusted code to do less preprocessing * Use the mask decoder model to upscale masks to target resolution * Added dummy point/label when using point prompt * More tests with various image sizes (too small, too large, landscape/portrait, odd resolutions...)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,12 +39,14 @@ if (MSVC)
     set_target_properties(dlimgedit PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS ON)
   endif()
 endif()
+
 install(TARGETS dlimgedit
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib)
-install(DIRECTORY include/ DESTINATION include)
 install(FILES ${DLIMGEDIT_RUNTIME_DEPENDENCIES} DESTINATION bin)
+install(DIRECTORY include/ DESTINATION include)
+install(DIRECTORY models/ DESTINATION models)
 
 if (DLIMGEDIT_TESTS)
   enable_testing()
