--- a/depend/fmt/CMakeLists.txt
+++ b/depend/fmt/CMakeLists.txt
@@ -1,5 +1,6 @@
 include(FetchContent)
 
+set(FMT_INSTALL OFF)
 FetchContent_Declare(fmt
   GIT_REPOSITORY https://github.com/fmtlib/fmt.git
   GIT_TAG        10.0.0
