CI: install & upload

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,10 +10,17 @@ target_sources(dlimgedit PRIVATE
 )
 target_compile_definitions(dlimgedit PRIVATE DLIMGEDIT_EXPORTS)
 target_include_directories(dlimgedit PUBLIC
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
-    PRIVATE .)
-target_link_libraries(dlimgedit PRIVATE fmt onnxruntime stb Eigen3::Eigen dylib)
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
+  PRIVATE .
+)
+target_link_libraries(dlimgedit
+  PRIVATE fmt onnxruntime stb Eigen3::Eigen dylib
+)
+set_target_properties(dlimgedit PROPERTIES
+  VERSION ${PROJECT_VERSION}
+  SOVERSION ${PROJECT_VERSION_MAJOR}
+)
 
 if (MSVC)
   target_compile_options(dlimgedit PRIVATE /Zi /W4 /WX)
