--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -25,7 +25,7 @@ jobs:
         lfs: true
 
     - name: Configure
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/install
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_INSTALL_PREFIX=${{github.workspace}}/install -DDLIMGEDIT_INSTALL_MODELS=OFF -DDLIMGEDIT_INSTALL_RUNTIME=OFF
 
     - name: Build
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
@@ -38,10 +38,14 @@ jobs:
       working-directory: ${{github.workspace}}/build
       run: cmake --install . --config ${{env.BUILD_TYPE}}
 
+    - name: Package
+      working-directory: ${{github.workspace}}/build
+      run: cpack -C ${{env.BUILD_TYPE}}
+
     - name: Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: dlimgedit
+        name: packages
         path: |
-          install
-          !install/models/**/*.onnx
+          build/dlimgedit-*.zip
+          build/dlimgedit-*.tar.gz
