Made it easier to include as a sub-project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,26 @@
-cmake_minimum_required(VERSION 3.23)
+cmake_minimum_required(VERSION 3.22)
 
 project(dlimgedit VERSION 1.0.0 LANGUAGES CXX)
 
-option(DLIMGEDIT_TESTS "Build tests" ON)
-option(DLIMGEDIT_INSTALL_MODELS "Install models" ON)
-option(DLIMGEDIT_INSTALL_RUNTIME "Install runtime dependencies" ON)
+option(DLIMGEDIT_TESTS "Build tests" ${PROJECT_IS_TOP_LEVEL})
+option(DLIMGEDIT_INSTALL_MODELS "Install models" ${PROJECT_IS_TOP_LEVEL})
+option(DLIMGEDIT_INSTALL_RUNTIME "Install runtime dependencies" ${PROJECT_IS_TOP_LEVEL})
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_INSTALL_RPATH $ORIGIN)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+if(PROJECT_IS_TOP_LEVEL)
+  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+endif()
 
 add_subdirectory(depend/fmt)
 add_subdirectory(depend/eigen)
 add_subdirectory(depend/onnx)
 add_subdirectory(depend/stb)
 add_subdirectory(depend/dylib)
-add_subdirectory(depend/catch2)
 
 add_subdirectory(src)
 
@@ -27,6 +28,7 @@ add_subdirectory(models/segmentation)
 
 if(DLIMGEDIT_TESTS)
   enable_testing()
+  add_subdirectory(depend/catch2)
   add_subdirectory(test)
 endif()
 
