--- a/depend/fmt/CMakeLists.txt
+++ b/depend/fmt/CMakeLists.txt
@@ -1,9 +1,12 @@
-include(FetchContent)
+if(NOT TARGET fmt)
+  include(FetchContent)
 
-set(FMT_INSTALL OFF)
-FetchContent_Declare(fmt
-  GIT_REPOSITORY https://github.com/fmtlib/fmt.git
-  GIT_TAG        10.0.0
-  GIT_SHALLOW    true
-)
-FetchContent_MakeAvailable(fmt)
+  set(FMT_INSTALL OFF)
+  FetchContent_Declare(fmt
+    GIT_REPOSITORY https://github.com/fmtlib/fmt.git
+    GIT_TAG        10.0.0
+    GIT_SHALLOW    true
+  )
+  FetchContent_MakeAvailable(fmt)
+
+endif() # fmt
