--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,4 +9,10 @@ target_link_libraries(test_dlimgedit PRIVATE
   dlimgedit fmt onnxruntime Eigen3::Eigen Catch2::Catch2WithMain
 )
 
+if (MSVC)
+  target_compile_options(test_dlimgedit PRIVATE /Zi /W4 /WX)
+  target_compile_options(test_dlimgedit PRIVATE /wd4127 /wd5054 /wd4245) # for Eigen
+  target_link_options(test_dlimgedit PRIVATE /DEBUG)
+endif()
+
 add_test(NAME test_dlimgedit COMMAND test_dlimgedit)
