Implement MobileSAM modules: PatchEmbed, LayerNorm2d, ConvLayer, BasicLayer, TinyViT + added export script for gguf conversion + run full image encoder with ggml

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_executable(test_dlimgedit)
 target_sources(test_dlimgedit PRIVATE
   test_ggml.cpp
-  test_ggml_mobile.cpp
+  test_mobile_sam.cpp
   test_image.cpp
   test_segmentation.cpp
   test_utils.cpp
