--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,5 @@
+# Unit tests with Catch2 
+
 add_executable(test_dlimgedit)
 target_sources(test_dlimgedit PRIVATE
   test_ggml.cpp
@@ -19,13 +21,26 @@ endif()
 
 add_test(NAME test_dlimgedit COMMAND test_dlimgedit)
 
+# Workbench library for python tests
 
 add_library(dlimgedit_workbench workbench.cpp)
 target_include_directories(dlimgedit_workbench PRIVATE ../src)
 target_link_libraries(dlimgedit_workbench PRIVATE 
-  dlimgedit fmt onnxruntime ggml
+  dlimgedit fmt ggml
 )
 if (MSVC)
   target_compile_options(dlimgedit_workbench PRIVATE /Zi /Od)
   target_link_options(dlimgedit_workbench PRIVATE /DEBUG)
+endif()
+
+# Benchmark application for profiling
+
+add_executable(benchmark_dlimgedit benchmark.cpp)
+target_include_directories(benchmark_dlimgedit PRIVATE ../src)
+target_link_libraries(benchmark_dlimgedit PRIVATE 
+  dlimgedit fmt ggml
+)
+if (MSVC)
+  target_compile_options(benchmark_dlimgedit PRIVATE /Zi)
+  target_link_options(benchmark_dlimgedit PRIVATE /DEBUG)
 endif()
